packages/platform/nros-platform-api/include/nros/platform.h


typedef int8_t nros_platform_ret_t;
#define NROS_PLATFORM_RET_OK              0
#define NROS_PLATFORM_RET_ERROR           -1
#define NROS_PLATFORM_RET_UNSUPPORTED     -5
#define NROS_PLATFORM_RET_NOMEM           -6
#define NROS_PLATFORM_RET_INVALID         -7
#define NROS_PLATFORM_RET_TIMEOUT         -8
uint64_t nros_platform_clock_ns(void);
uint64_t nros_platform_clock_resolution_ns(void);
uint64_t nros_platform_epoch_us(void);
void *nros_platform_alloc(size_t size);
void *nros_platform_realloc(void *ptr, size_t size);
void nros_platform_dealloc(void *ptr);
size_t nros_platform_heap_used_bytes(void);
typedef struct {
    const char *name;
    size_t stack_bytes;
    void *stack_mem;
    int32_t priority;
    int8_t core;
    uint8_t flags;
} nros_platform_task_attr_t;
#define NROS_PLATFORM_TASK_DETACHED 0x01u
#define NROS_PLATFORM_PRIORITY_MIN      0
#define NROS_PLATFORM_PRIORITY_MAX      255
#define NROS_PLATFORM_PRIORITY_INHERIT  INT32_MIN
#define NROS_PLATFORM_PRIORITY_RAW(n)   (-0x40000000 - (int32_t) (n))
#  define NROS_PLATFORM_TASK_STORAGE_SIZE     512
#  define NROS_PLATFORM_MUTEX_STORAGE_SIZE    256
#  define NROS_PLATFORM_MUTEX_REC_STORAGE_SIZE 256
#  define NROS_PLATFORM_CONDVAR_STORAGE_SIZE  256
#  define NROS_PLATFORM_STORAGE_ALIGN         8
typedef void (*nros_platform_log_writer_fn_t)(
    uint8_t        severity,
    const uint8_t *name_ptr, uintptr_t name_len,
    const uint8_t *msg_ptr,  uintptr_t msg_len);
typedef void (*nros_platform_log_flush_fn_t)(void);