packages/platform/nros-platform-api/include/nros/platform_timer.h


typedef void (*nros_platform_timer_callback_t)(void *user_data);