packages/platform/nros-platform-cffi/src/generated.rs

//! AUTO-GENERATED by scripts/gen-abi-bindings.sh (bindgen 0.72.1) — DO NOT EDIT.
//!
//! Source of truth: `packages/platform/nros-platform-api/include/nros/platform*.h` (RFC-0054).
//! Edit the headers, rerun the script, commit both.
#![allow(non_camel_case_types, non_snake_case, non_upper_case_globals)]
#![allow(unsafe_op_in_unsafe_fn, clippy::missing_safety_doc)]
/* automatically generated by rust-bindgen 0.72.1 */

pub type nros_platform_ret_t = i8;
pub type nros_platform_log_writer_fn_t = ::core::option::Option<
    unsafe extern "C" fn(
        severity: u8,
        name_ptr: *const u8,
        name_len: usize,
        msg_ptr: *const u8,
        msg_len: usize,
    ),
>;
pub type nros_platform_log_flush_fn_t = ::core::option::Option<unsafe extern "C" fn()>;
#[doc = " @file platform_timer.h\n @brief Canonical C ABI for the nros platform timer surface.\n\n Companion to `<nros/platform.h>`; sits beside the core 39-symbol\n ABI as the Phase 110.E platform-timer interface. Carved into a\n separate header because bare-metal / single-shot consumers can\n omit timer support without losing the canonical platform symbols.\n\n # Handle model\n\n  Platform timer handles are opaque `void *`. The implementation\n  allocates whatever it needs to track the underlying primitive\n  (`TimerHandle_t` on FreeRTOS, `TX_TIMER *` on ThreadX, `timer_t`\n  on POSIX, `*mut k_timer` on Zephyr); the runtime never inspects\n  the bytes pointed at.\n\n # Return-value conventions\n\n  - `create_periodic` / `create_oneshot` return non-NULL on success\n    and `NULL` on failure (analogous to libc `malloc`).\n  - `cancel` returns 1 when the cancellation prevented the callback\n    from firing, 0 if the callback already fired (or the timer was\n    already cancelled or destroyed), -1 on unrecoverable error.\n  - `destroy` is best-effort; idempotent on already-destroyed handles.\n\n # Threading / context\n\n  Callbacks are invoked from a platform-defined timer context — a\n  direct ISR on Zephyr / bare-metal, deferred to the FreeRTOS timer\n  task on FreeRTOS, a real-time signal on POSIX. Callback bodies\n  must be short, must not call back into nros_platform_* heap or\n  blocking primitives, and must use atomic operations for shared\n  state. `user_data` must outlive the timer handle."]
pub type nros_platform_timer_callback_t =
    ::core::option::Option<unsafe extern "C" fn(user_data: *mut core::ffi::c_void)>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct nros_platform_task_attr_t {
    #[doc = " Task name for the kernel's own tables and crash dumps. `NULL` = the\n  port's default. Ports whose kernel has no name concept ignore it."]
    pub name: *const core::ffi::c_char,
    #[doc = " Minimum stack size in BYTES. `0` = the port's default.\n\n  A FLOOR, not an exact size (issue 0612). Every port has a minimum of its\n  own — `PTHREAD_STACK_MIN`, `configMINIMAL_STACK_SIZE`, `TX_MINIMUM_STACK`\n  — and those differ by an order of magnitude, and on POSIX differ by\n  ARCHITECTURE (16384 on glibc/x86_64, 131072 on glibc/aarch64). So no\n  portable caller can name a number that is legal everywhere, and a port\n  that treats a small request as an error turns a reasonable ask into a\n  dead capability: that is exactly how `Executor::signal_fd()` returned\n  `NotInitialized` on every Linux host. A port raises this to its own\n  minimum; it never lowers it, and never refuses for being too small.\n\n  Always bytes, never words: FreeRTOS's `xTaskCreate` takes words, and the\n  private struct it replaced called the field `stack_depth` while ThreadX's\n  identically-named field was bytes. The conversion belongs in the one port\n  that needs it, not in every caller."]
    pub stack_bytes: usize,
    #[doc = " Caller-provided stack memory, or `NULL` to let the port obtain it.\n\n  ThreadX requires the stack from its caller; POSIX, FreeRTOS and ESP-IDF\n  let the kernel allocate and ignore this. A port that needs memory and is\n  given `NULL` obtains it itself and releases it in `task_free`."]
    pub stack_mem: *mut core::ffi::c_void,
    #[doc = " Scheduling priority in the NORMALISED band: `0` = least urgent, larger\n  = more urgent, `NROS_PLATFORM_PRIORITY_INHERIT` = keep the creating\n  task's.\n\n  phase-364 W5. This was \"platform-native\", and the natives disagree: `0`\n  is the HIGHEST priority on ThreadX and the LOWEST on FreeRTOS, while\n  Zephyr runs lower-is-more-urgent with negatives reserved for cooperative\n  threads. A tier priority is authored ONCE, in `system.toml`, and\n  deployed to several of them — so the same number meant \"run me first\" on\n  one board and \"run me last\" on another, with nothing in the ABI\n  recording which convention a port used.\n\n  Each port maps this band onto its own range and documents the map at its\n  `task_init`. Use `NROS_PLATFORM_PRIORITY_RAW(n)` to bypass the band when\n  tuning one RTOS against its own documentation — that is a legitimate\n  thing to do, and the band should not make it impossible."]
    pub priority: i32,
    #[doc = " SMP core to pin to, or `-1` for unpinned. Ignored on single-core."]
    pub core: i8,
    #[doc = " `NROS_PLATFORM_TASK_*` flags below."]
    pub flags: u8,
}
pub const NROS_PLATFORM_RET_OK: i32 = 0;
pub const NROS_PLATFORM_RET_ERROR: i32 = -1;
pub const NROS_PLATFORM_RET_UNSUPPORTED: i32 = -5;
pub const NROS_PLATFORM_RET_NOMEM: i32 = -6;
pub const NROS_PLATFORM_RET_INVALID: i32 = -7;
pub const NROS_PLATFORM_RET_TIMEOUT: i32 = -8;
pub const NROS_PLATFORM_TASK_DETACHED: i32 = 1;
pub const NROS_PLATFORM_PRIORITY_MIN: i32 = 0;
pub const NROS_PLATFORM_PRIORITY_MAX: i32 = 255;
pub const NROS_PLATFORM_PRIORITY_INHERIT: i32 = -2147483648;
pub const NROS_PLATFORM_TASK_STORAGE_SIZE: i32 = 512;
pub const NROS_PLATFORM_MUTEX_STORAGE_SIZE: i32 = 256;
pub const NROS_PLATFORM_MUTEX_REC_STORAGE_SIZE: i32 = 256;
pub const NROS_PLATFORM_CONDVAR_STORAGE_SIZE: i32 = 256;
pub const NROS_PLATFORM_STORAGE_ALIGN: i32 = 8;
unsafe extern "C" {
    #[doc = " Monotonic nanoseconds since a platform-defined epoch (boot, program\n  start, …). Never decreases. Wraps after ~584 years.\n\n  Must be backed by a hardware counter or the OS tick — never by a\n  software counter that only advances when polled.\n\n  Available immediately after platform init, before any other nros\n  subsystem. SHOULD be callable from an ISR; a port whose clock is not\n  ISR-safe must say so in its port documentation.\n\n  RFC-0073: this replaced the former `clock_ms` / `clock_us` pair. Ports\n  that can convert without a runtime division should — where the counter\n  frequency divides 1e9 (25/50/100/125/200/250 MHz) a compile-time\n  ns-per-cycle multiply is ~2.5x cheaper than the divide it replaces."]
    pub fn nros_platform_clock_ns() -> u64;
}
unsafe extern "C" {
    #[doc = " Granularity of `nros_platform_clock_ns`, in nanoseconds: the smallest\n  non-zero difference two successive reads can report.\n\n  Examples: 1000000 for a 1 kHz tick, 40 for a 25 MHz cycle counter,\n  1000 for a microsecond hardware timer.\n\n  Must be non-zero, and constant for the lifetime of the program after\n  platform init. A port whose underlying rate is only known at runtime\n  returns the resolved value; one whose rate can change under it returns\n  the COARSEST value it may exhibit. There is no \"unknown\" encoding — a\n  port that cannot answer honestly is reporting a clock it cannot\n  honestly offer."]
    pub fn nros_platform_clock_resolution_ns() -> u64;
}
unsafe extern "C" {
    #[doc = " Microseconds since the UNIX EPOCH (1970-01-01T00:00:00Z), or `0` when\n  this platform has no wall-clock source.\n\n  READ THIS BEFORE REACHING FOR `nros_platform_clock_ns` (issue 0758).\n  The two clocks in this header differ by one word in their names and by\n  the only property that matters for interop:\n\n    - `nros_platform_clock_ns` is MONOTONIC and boot-relative. Use it for\n      durations, deadlines, spin gaps, timeouts — anything comparing two\n      readings from THIS image. It is meaningless to a peer.\n    - `nros_platform_epoch_us` is ABSOLUTE. Use it for message stamps and\n      anything a peer will compare against its own clock.\n\n  Reaching for the wrong one does not fail to build and does not fail\n  locally; it fails at a peer, which is the expensive place to find out.\n  The concrete case is the consumer this exists for: an embedded island\n  stamped control commands from its boot epoch and Autoware's\n  `vehicle_cmd_gate` rejected every one as stale, so autonomous mode could\n  never actuate.\n\n  `0` MEANS \"NO WALL CLOCK\", not \"the epoch\". Per this header's clock rule\n  (see the top of file: \"If the platform has no clock, return `0`\") this\n  never errors. A caller that gets `0` knows the image cannot stamp\n  absolute time and should keep publishing boot-relative stamps knowingly,\n  rather than publishing a confidently wrong absolute one. 1970 is not a\n  plausible reading, so the sentinel costs no real value.\n\n  Not required to be monotonic: a platform that acquires its epoch after\n  boot (SNTP, RTC handoff) will JUMP when it does, and may jump backwards.\n  Callers needing monotonicity use `nros_platform_clock_ns`.\n\n  Need not be ISR-safe, and unlike `nros_platform_clock_ns` need not be\n  available immediately after platform init — a port that acquires its\n  epoch over the network necessarily answers `0` until it has."]
    pub fn nros_platform_epoch_us() -> u64;
}
unsafe extern "C" {
    #[doc = " Allocate `size` bytes; return `NULL` on failure. May be called from\n  any thread."]
    pub fn nros_platform_alloc(size: usize) -> *mut core::ffi::c_void;
}
unsafe extern "C" {
    #[doc = " Resize the block at `ptr` to `size` bytes. Equivalent to libc\n  `realloc`: `NULL` ptr → fresh alloc; `0` size → free + return `NULL`.\n  Preserves contents up to `min(old, new)`."]
    pub fn nros_platform_realloc(
        ptr: *mut core::ffi::c_void,
        size: usize,
    ) -> *mut core::ffi::c_void;
}
unsafe extern "C" {
    #[doc = " Free a previously allocated block. `NULL` is a no-op."]
    pub fn nros_platform_dealloc(ptr: *mut core::ffi::c_void);
}
unsafe extern "C" {
    #[doc = " Bytes currently allocated from the platform heap, or `0` if the port\n  does not instrument it. Phase 230 / RFC-0034 D7: the true unified figure\n  where the platform owns one kernel heap shared by the C side and the\n  Rust `#[global_allocator]`."]
    pub fn nros_platform_heap_used_bytes() -> usize;
}
